ajuste de demo 1

--- a/demo1/index.html
+++ b/demo1/index.html
@@ -61,7 +61,9 @@
 								<div class="header-row">
 									<div class="header-logo">
 										<a href="demo-startup-agency.html">
-											<img src="img/demos/startup-agency/logo.png" class="img-fluid" width="123" height="32" alt="" />
+											<!-- <img src="img/demos/startup-agency/logo.png" class="img-fluid" width="123" height="32" alt="" /> -->
+								
+											<h2>LOGO</h2>
 										</a>
 									</div>
 								</div>
