--- a/demo2/demo-auto-services-contact.html
+++ b/demo2/demo-auto-services-contact.html
@@ -124,7 +124,7 @@
 													<li><a href="index.html" class="nav-link ">Home</a></li>
 													<li><a href="demo-auto-services-about-us.html" class="nav-link ">Sobre Nós</a></li>
 													<li class="dropdown">
-														<a href="demo-auto-services-services.html" class="nav-link dropdown-toggle">Serviços</a>
+															<a href="#" class="nav-link dropdown-toggle">Serviços</a>
 														<ul class="dropdown-menu">
 															<li><a href="#" class="dropdown-item">Serviço 1</a></li>
 															<li><a href="#" class="dropdown-item">Serviço 2</a></li>
@@ -292,7 +292,8 @@
 					<div class="row text-center text-md-start py-4 my-5">
 						<div class="col-md-6 col-lg-3 align-self-center text-center text-md-start text-lg-center mb-5 mb-lg-0">
 							<a href="index.html" class="text-decoration-none">
-								<img src="img/demos/auto-services/logo-light.png" class="img-fluid" alt="" />
+								<!-- <img src="img/demos/auto-services/logo-light.png" class="img-fluid" alt="" /> -->
+								LOGO
 							</a>
 						</div>
 						<div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
