--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 										<li class="social-icons-twitter"><a href="#" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
 										<li class="social-icons-linkedin"><a href="#" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
 									</ul>
-									<a href="tel:+1234567890" class="font-weight-semibold text-color-dark text-color-hover-primary text-decoration-none custom-font-size-2 ps-1 ms-lg-3 ms-xl-4">(11) 4512-3497</a>
+									<a href="tel:+1234567890" class="font-weight-semibold text-color-dark text-color-hover-primary text-decoration-none custom-font-size-2 ps-1 ms-lg-3 ms-xl-4">11-4512-3497</a>
 									<button class="btn header-btn-collapse-nav" data-bs-toggle="collapse" data-bs-target=".header-nav-main nav">
 										<i class="fas fa-bars"></i>
 									</button>
@@ -103,10 +103,10 @@
 
 			<div role="main" class="main">
 
-				<section class="section border-0 m-0" style="background-image: url(img/banner1.jpg); background-size: cover; background-position: center; height: 100vh;">
+				<section class="section border-0 m-0" style="background-image: url(img/header.png); background-size: cover; background-position: center; height: 100vh;">
 					<div class="container h-100">
 						<div class="d-flex flex-column align-items-center justify-content-center text-center h-100">
-							<h3 class="position-relative text-color-dark text-5 line-height-5 font-weight-semibold px-4 mb-2 appear-animation" data-appear-animation="fadeInDownShorter" data-plugin-options="{'minWindowWidth': 0}">
+							<h3 class="position-relative text-color-light text-5 line-height-5 font-weight-semibold px-4 mb-2 appear-animation" data-appear-animation="fadeInDownShorter" data-plugin-options="{'minWindowWidth': 0}">
 								<span class="position-absolute right-100pct top-50pct transform3dy-n50 opacity-6">
 									<img src="img/slides/slide-title-border-light.png" class="w-auto appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="250" data-plugin-options="{'minWindowWidth': 0}" alt="" />
 								</span>
@@ -115,8 +115,8 @@
 									<img src="img/slides/slide-title-border-light.png" class="w-auto appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="250" data-plugin-options="{'minWindowWidth': 0}" alt="" />
 								</span>
 							</h3>
-							<h1 class="text-color-dark font-weight-extra-bold text-12 mb-3 appear-animation" data-appear-animation="blurIn" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">MAGIC PAINT</h1>
-							<p class="text-4-5 text-color-dark font-weight-light opacity-7 mb-4" data-plugin-animated-letters data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0}">Serviços de pintura</p>
+							<h1 class="text-color-light font-weight-extra-bold text-12 mb-3 appear-animation" data-appear-animation="blurIn" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">MAGIC PAINT</h1>
+							<p class="text-4-5 text-color-light font-weight-light opacity-7 mb-4" data-plugin-animated-letters data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0}">Serviços de pintura</p>
 						</div>
 					</div>
 				</section>
@@ -172,7 +172,7 @@
 									</g>
 								</svg>
 								<div data-plugin-float-element data-plugin-options="{'startPos': 'top', 'speed': 0.1, 'isInsideSVG': true, 'transition': true, 'transitionDuration': 2000}">
-									<img src="img/banner1.png" class="img-fluid position-relative z-index-1 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1100" alt="" />
+									<img src="img/sobrenos.jpg" class="img-fluid position-relative z-index-1 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1100" alt="" />
 								</div>
 							</div>
 						</div>
@@ -235,7 +235,22 @@
 														<div class="card-body p-3">
 															<div class="thumb-info thumb-info-hide-wrapper-bg mb-3 pb-2">
 																<div class="thumb-info-wrapper">
-																	<img src="img/estufa1.png" class="img-fluid" alt="John Doe" />
+																	<img src="img/pintura.jpg" class="img-fluid" alt="John Doe" />
+																</div>
+															</div>
+															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">PINTURA</h3>
+															<!-- <p class="text-center text-color-grey text-3 mb-2">CEO & Founder</p> -->
+														</div>
+													</div>
+												</a>
+											</div>
+											<div>
+												<a class="text-decoration-none">
+													<div class="card custom-card-style-1 box-shadow-4 my-3">
+														<div class="card-body p-3">
+															<div class="thumb-info thumb-info-hide-wrapper-bg mb-3 pb-2">
+																<div class="thumb-info-wrapper">
+																	<img src="img/estufa.png" class="img-fluid" alt="John Doe" />
 																</div>
 															</div>
 															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">ESTUFA ESTACIONÁRIA</h3>
@@ -250,22 +265,7 @@
 														<div class="card-body p-3">
 															<div class="thumb-info thumb-info-hide-wrapper-bg mb-3 pb-2">
 																<div class="thumb-info-wrapper">
-																	<img src="img/estufa2.png" class="img-fluid" alt="John Doe" />
-																</div>
-															</div>
-															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">ESTUFA ESTACIONÁRIA</h3>
-															<!-- <p class="text-center text-color-grey text-3 mb-2">CEO & Founder</p> -->
-														</div>
-													</div>
-												</a>
-											</div>
-											<div>
-												<a class="text-decoration-none">
-													<div class="card custom-card-style-1 box-shadow-4 my-3">
-														<div class="card-body p-3">
-															<div class="thumb-info thumb-info-hide-wrapper-bg mb-3 pb-2">
-																<div class="thumb-info-wrapper">
-																	<img src="img/estufacontinua1.png" class="img-fluid" alt="John Doe" />
+																	<img src="img/continua.png" class="img-fluid" alt="John Doe" />
 																</div>
 															</div>
 															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">ESTUFA CONTÍNUA</h3>
@@ -280,10 +280,10 @@
 														<div class="card-body p-3">
 															<div class="thumb-info thumb-info-hide-wrapper-bg mb-3 pb-2">
 																<div class="thumb-info-wrapper">
-																	<img src="img/estufacontinua2.png" class="img-fluid" alt="John Doe" />
+																	<img src="img/INSPEÇÃO.png" class="img-fluid" alt="John Doe" />
 																</div>
 															</div>
-															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">ESTUFA CONTÍNUA</h3>
+															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">INSPEÇÃO DE PEÇAS</h3>
 															<!-- <p class="text-center text-color-grey text-3 mb-2">CEO & Founder</p> -->
 														</div>
 													</div>
@@ -295,7 +295,7 @@
 														<div class="card-body p-3">
 															<div class="thumb-info thumb-info-hide-wrapper-bg mb-3 pb-2">
 																<div class="thumb-info-wrapper">
-																	<img src="img/TAMPOGRAFIA.png" class="img-fluid" alt="John Doe" />
+																	<img src="img/tampografia.png" class="img-fluid" alt="John Doe" />
 																</div>
 															</div>
 															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">TAMPOGRAFIA</h3>
@@ -314,6 +314,36 @@
 																</div>
 															</div>
 															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">ÁREA DE EXPEDIÇÃO</h3>
+															<!-- <p class="text-center text-color-grey text-3 mb-2">CEO & Founder</p> -->
+														</div>
+													</div>
+												</a>
+											</div>
+											<div>
+												<a  class="text-decoration-none">
+													<div class="card custom-card-style-1 box-shadow-4 my-3">
+														<div class="card-body p-3">
+															<div class="thumb-info thumb-info-hide-wrapper-bg mb-3 pb-2">
+																<div class="thumb-info-wrapper">
+																	<img src="img/estoque.png" class="img-fluid" alt="John Doe" />
+																</div>
+															</div>
+															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">ESTOQUE DE TINTA</h3>
+															<!-- <p class="text-center text-color-grey text-3 mb-2">CEO & Founder</p> -->
+														</div>
+													</div>
+												</a>
+											</div>
+											<div>
+												<a  class="text-decoration-none">
+													<div class="card custom-card-style-1 box-shadow-4 my-3">
+														<div class="card-body p-3">
+															<div class="thumb-info thumb-info-hide-wrapper-bg mb-3 pb-2">
+																<div class="thumb-info-wrapper">
+																	<img src="img/show.png" class="img-fluid" alt="John Doe" />
+																</div>
+															</div>
+															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">SHOWROOM</h3>
 															<!-- <p class="text-center text-color-grey text-3 mb-2">CEO & Founder</p> -->
 														</div>
 													</div>
@@ -416,6 +446,24 @@
 											</div>
 										</a>
 									</div>
+									<div class="my-5">
+										<a >
+											<div class="thumb-info thumb-info-hide-wrapper-bg custom-thumb-info-hover-1 box-shadow-4 rounded-0 my-3">
+												<div class="thumb-info-wrapper rounded-0">
+													<img src="img/produto8.png" class="img-fluid rounded-0" alt="Work 5" />
+												</div>
+											</div>
+										</a>
+									</div>
+									<div class="my-5">
+										<a >
+											<div class="thumb-info thumb-info-hide-wrapper-bg custom-thumb-info-hover-1 box-shadow-4 rounded-0 my-3">
+												<div class="thumb-info-wrapper rounded-0">
+													<img src="img/produto9.png" class="img-fluid rounded-0" alt="Work 5" />
+												</div>
+											</div>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -448,7 +496,7 @@
 							</div>
 							<div class="col-5 col-sm-7 col-md-12 col-lg-6 text-center">
 								<div class="position-relative d-inline-flex">
-									<img src="img/EXPEDIÇÃO.png" class="img-fluid rounded-circle box-shadow-5 position-absolute top-50pct transform3dy-n50 z-index-3" alt="" style="right: 75%;">
+									<img src="img/tinta.jpeg" class="img-fluid rounded-circle box-shadow-5 position-absolute top-50pct transform3dy-n50 z-index-3" alt="" style="right: 75%;">
 									<img src="img/producao.png" class="img-fluid rounded-circle box-shadow-5 z-index-2" width="260" alt="">
 									<img src="img/pintura.png" class="img-fluid rounded-circle box-shadow-5 position-absolute top-50pct transform3dy-n50 z-index-1" alt="" style="left: 75%;">
 								</div>
@@ -591,7 +639,7 @@
 												<div data-plugin-float-element data-plugin-options="{'startPos': 'top', 'speed': 0.2, 'isInsideSVG': true, 'transition': true, 'transitionDuration': 2000}">
 													<img class="icon-animated" width="55" src="img/demos/startup-agency/icons/icon-location.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary mb-3'}" />
 													<h4 class="font-weight-bold text-color-light text-5 mb-0">Endereço</h4>
-													<p class="text-4 text-color-light opacity-5 font-weight-light mb-0">Rua: Luís Novi, 95 Capuava – Mauá – São Paulo</p>
+													<p class="text-4 text-color-light opacity-5 font-weight-light mb-0">Rua Luis Novi 95 Capuava -SP</p>
 												</div>
 											</div>
 										</div>
@@ -600,7 +648,7 @@
 												<div data-plugin-float-element data-plugin-options="{'startPos': 'bottom', 'speed': 0.1, 'isInsideSVG': true, 'transition': true, 'transitionDuration': 2000}">
 													<img class="icon-animated" width="55" src="img/demos/startup-agency/icons/icon-mail.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-secondary mb-3'}" />
 													<h4 class="font-weight-bold text-color-light text-5 mb-0">E-mail </h4>
-													<a href="mailto:email@domain.com" class="text-4 text-color-light text-color-hover-primary opacity-5 font-weight-light mb-0">contato@magicpaint.com.br</a>
+													<a href="mailto:email@domain.com" class="text-4 text-color-light text-color-hover-primary opacity-5 font-weight-light mb-0">pinturas.cef@gmail.com</a>
 												</div>
 											</div>
 										</div>
@@ -612,8 +660,8 @@
 											<div class="col">
 												<div data-plugin-float-element data-plugin-options="{'startPos': 'bottom', 'speed': 0.2, 'isInsideSVG': true, 'transition': true, 'transitionDuration': 2000}">
 													<img class="icon-animated" width="55" src="img/demos/startup-agency/icons/icon-phone.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-secondary mb-3'}" />
-													<h4 class="font-weight-bold text-color-light text-5 mb-0">Phone Number</h4>
-													<a href="tel:+1234567890" class="text-4 text-color-light text-color-hover-primary opacity-5 font-weight-light mb-0">(11) 4512-3497</a>
+													<h4 class="font-weight-bold text-color-light text-5 mb-0">Telefone</h4>
+													<a href="tel:+1234567890" class="text-4 text-color-light text-color-hover-primary opacity-5 font-weight-light mb-0">11-4512-3497</a>
 												</div>
 											</div>
 										</div>
@@ -622,7 +670,8 @@
 												<div data-plugin-float-element data-plugin-options="{'startPos': 'bottom', 'speed': 0.1, 'isInsideSVG': true, 'transition': true, 'transitionDuration': 2000}">
 													<img class="icon-animated" width="55" src="img/demos/startup-agency/icons/icon-calendar.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary mb-3'}" />
 													<h4 class="font-weight-bold text-color-light text-5 mb-0">Horario de Funcionamento</h4>
-													<p class="text-4 text-color-light opacity-5 font-weight-light mb-0">Seg - Sex / 9:00AM - 8:00PM</p>
+													<p class="text-4 text-color-light opacity-5 font-weight-light mb-0">Seg - quinta / 8:00 - 18:00</p>
+													<p class="text-4 text-color-light opacity-5 font-weight-light mb-0">Sex / 8:00 - 17:00</p>
 												</div>
 											</div>
 										</div>
@@ -648,17 +697,17 @@
 
 											<div class="row">
 												<div class="form-group col">
-													<input type="text" value="" data-msg-required="Please enter your name." maxlength="100" class="form-control" name="name" placeholder="Your Name" required>
+													<input type="text" value="" data-msg-required="Please enter your name." maxlength="100" class="form-control" name="name" placeholder="Nome" required>
 												</div>
 											</div>
 											<div class="row">
 												<div class="form-group col">
-													<input type="email" value="" data-msg-required="Please enter your email address." data-msg-email="Please enter a valid email address." maxlength="100" class="form-control" name="email" placeholder="Email Address" required>
+													<input type="email" value="" data-msg-required="Please enter your email address." data-msg-email="Please enter a valid email address." maxlength="100" class="form-control" name="email" placeholder="Email " required>
 												</div>
 											</div>
 											<div class="row">
 												<div class="form-group col">
-													<textarea maxlength="5000" data-msg-required="Please enter your message." rows="6" class="form-control" name="message" placeholder="Your Message" required></textarea>
+													<textarea maxlength="5000" data-msg-required="Please enter your message." rows="6" class="form-control" name="message" placeholder="Mensagem" required></textarea>
 												</div>
 											</div>
 											<div class="row">
