--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 														<div class="card-body p-3">
 															<div class="thumb-info thumb-info-hide-wrapper-bg mb-3 pb-2">
 																<div class="thumb-info-wrapper">
-																	<img src="img/INSPEÇÃO.png" class="img-fluid" alt="John Doe" />
+																	<img src="img/inspec.png" class="img-fluid" alt="John Doe" />
 																</div>
 															</div>
 															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">INSPEÇÃO DE PEÇAS</h3>
@@ -298,7 +298,7 @@
 														<div class="card-body p-3">
 															<div class="thumb-info thumb-info-hide-wrapper-bg mb-3 pb-2">
 																<div class="thumb-info-wrapper">
-																	<img src="img/EXPEDIÇÃO.png" class="img-fluid" alt="John Doe" />
+																	<img src="img/expedicao.png" class="img-fluid" alt="John Doe" />
 																</div>
 															</div>
 															<h3 class="text-center font-weight-bold text-capitalize line-height-1 text-5 text-color-hover-primary mb-0">ÁREA DE EXPEDIÇÃO</h3>
