--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 													<div class="card-body p-3">
 														<div class="thumb-info thumb-info-hide-wrapper-bg mb-3 pb-2">
 															<div class="thumb-info-wrapper">
-																<img src="img/tampografia.png" class="img-fluid"
+																<img src="img/tampo.png" class="img-fluid"
 																	alt="John Doe" />
 															</div>
 														</div>
