ajuste de redes sociais

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 									<li class="social-icons-facebook"><a href="https://www.facebook.com/pintura.magic"
 											target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
 									<li class="social-icons-instagram"><a href="https://www.instagram.com/magiccpaint/"
-											target="_blank" title="Twitter"><i class="fab fa-instagram"></i></a></li>
+											target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
 								</ul>
 								<a href="tel:+1234567890"
 									class="font-weight-semibold text-color-dark text-color-hover-primary text-decoration-none custom-font-size-2 ps-1 ms-lg-3 ms-xl-4">11-4512-3497</a>
@@ -944,7 +944,7 @@
 							<li class="social-icons-facebook"><a href="https://www.facebook.com/pintura.magic"
 									target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
 							<li class="social-icons-instagram"><a href="https://www.instagram.com/magiccpaint/"
-									target="_blank" title="Twitter"><i class="fab fa-instagram"></i></a></li>
+									target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 						<div class="col">
 							<p class="text-center text-color-light opacity-5">MagicPaint © 2023. Todos direitos
