ajuste de detalhes v2

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 							class="text-color-grey positive-ls-2 font-weight-medium custom-font-size-2 appear-animation"
 							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">Sobre Nós</span>
 						<h2 class="font-weight-bold text-10 appear-animation" data-appear-animation="fadeInUpShorter"
-							data-appear-animation-delay="400">Conheça um pouco sobre a magic paint.</h2>
+							data-appear-animation-delay="400">Conheça um pouco sobre a MagicPaint.</h2>
 						<p class="custom-font-secondary custom-font-size-1 line-height-6 mb-4 pb-2 pe-lg-5 appear-animation"
 							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">Prestação de
 							Serviços de Pintura, em peças injetadas em termoplásticos, dos segmentos: Eletroeletrônico,
@@ -255,7 +255,7 @@
 							<p class="custom-font-size-2 font-weight-light appear-animation"
 								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">Dispomos de um
 								corpo técnico que juntamente com nossos fornecedores e parceiros, estão plenamente
-								capacitados a oferecer aos nossos clientes soluções completas de acabamento, Contamos
+								capacitados a oferecer aos nossos clientes soluções completas de acabamento. Contamos
 								com pessoal capacitado e em constante aperfeiçoamento e comprometidos em fazer com
 								excelência, tudo o que fazemos.</p>
 						</div>
@@ -465,7 +465,7 @@
 						<div class="col-lg-10 text-center">
 							<span
 								class="d-block text-color-grey positive-ls-2 font-weight-normal custom-font-size-2 text-color-light opacity-6 mb-1">Produtos</span>
-							<h2 class="font-weight-bold text-color-light text-10 mb-4">Feitos pela Magica Paint</h2>
+							<h2 class="font-weight-bold text-color-light text-10 mb-4">Feitos pela MagicPaint</h2>
 							<p class="custom-font-size-2 font-weight-light text-color-light mb-4 pb-3">Confira alguns
 								produtos feitos aqui.</p>
 						</div>
@@ -485,7 +485,7 @@
 									<span class="thumb-info-wrapper border-radius-0">
 										<img src="img/produto1.png" class="img-fluid border-radius-0" alt="">
 										<span class="thumb-info-title">
-											<span class="thumb-info-inner">Linha elétrica</span>
+											<span class="thumb-info-inner">Linha Elétrica</span>
 										</span>
 
 									</span>
@@ -515,7 +515,7 @@
 									<span class="thumb-info-wrapper border-radius-0">
 										<img src="img/produto3.png" class="img-fluid border-radius-0" alt="">
 										<span class="thumb-info-title">
-											<span class="thumb-info-inner">Linha automotiva</span>
+											<span class="thumb-info-inner">Linha Automotiva</span>
 										</span>
 
 									</span>
@@ -560,7 +560,7 @@
 									<span class="thumb-info-wrapper border-radius-0">
 										<img src="img/produto8.png" class="img-fluid border-radius-0" alt="">
 										<span class="thumb-info-title">
-											<span class="thumb-info-inner">eletroeletrônicos</span>
+											<span class="thumb-info-inner">Eletroeletrônicos</span>
 										</span>
 
 									</span>
@@ -607,7 +607,7 @@
 							</div>
 							<p class="text-color-dark custom-font-secondary text-5-5 line-height-4 appear-animation animated fadeInUpShorter appear-animation-visible"
 								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400"
-								style="animation-delay: 400ms;">Estamos instalados em uma área industrial de 512 m no
+								style="animation-delay: 400ms;">Estamos instalados em uma área industrial de 512 m² no
 								município
 								de Mauá - SP.
 								Nossa empresa está capacitada para efetuar pinturas em substratos plásticos como
@@ -820,8 +820,8 @@
 													data-icon
 													data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary mb-3'}" />
 												<h4 class="font-weight-bold text-color-light text-5 mb-0">Endereço</h4>
-												<p class="text-4 text-color-light opacity-5 font-weight-light mb-0">Rua
-													Luis Novi 95 Capuava -SP</p>
+												<p class="text-4 text-color-light opacity-5 font-weight-light mb-0">Rua Luis Novi, 95 Capuava Mauá-SP 
+													CEP : 09380-140</p>
 											</div>
 										</div>
 									</div>
